--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -1,5 +1,5 @@
 .button{
-    width: 321px;
+    width: 100%;
     height: 38px;
     padding: 0px 16px;
     border-radius: var(--radius-2);
@@ -7,12 +7,18 @@
     font-size: var(--font-size-4);
     line-height: var(--line-height-6);
     border: 1px solid;
+    cursor: pointer;
 }
 
 .login_register-btn{
     background-color: var(--brand100);
     border-color: var(--brand100);
     color: var(--gray900);
+}
+
+.login_register-btn:hover{
+    background-color: var(--brand200);
+    border-color: var(--brand200);
 }
 
 .page_change-btn{
@@ -22,22 +28,34 @@
 }
 
 .create_post-btn{
-    width: 152px;
+    width: 160px;
     background-color: var(--brand100);
     border-color: var(--brand100);
     color: var(--gray900);
+    cursor: pointer;
+}
+
+.create_post-btn:hover{
+    background-color: var(--brand200);
+    border-color: var(--brand200);
 }
 
 .edit_post-btn{
-    width: 55px;
+    width: 60px;
     height: 32px;
     border: 1px solid var(--gray600);
+    background-color: var(--gray900);
     padding: 0 8px;
     border-radius: var(--radius-2);
     color: var(--gray100);
     font-weight: var(--font-weigth-2);
     font-size: var(--font-size-5);
     line-height: var(--line-height-6);
+    cursor: pointer;
+}
+
+.edit_post-btn:hover{
+    background-color: var(--gray600);
 }
 
 .exclude_post-btn{
@@ -49,15 +67,18 @@
 .invis-btn{
     background-color: transparent;
     border: none;
+    cursor: pointer;
+    color: var(--brand100);
 }
 
-.invis-btn{
-    color: var(--brand100);
+.invis-btn:hover{
+    text-decoration: underline;
 }
 
 .modal_edit-btn{
     width: 162px;
     padding: 7px 20px;
+    cursor: pointer;
 }
 
 .modal_cancel-btn{
@@ -66,6 +87,7 @@
     background-color: var(--gray600);
     color: var(--gray400);
     border-radius: var(--radius-2);
+    cursor: pointer;
 }
 
 .modal_close-btn{
@@ -75,6 +97,8 @@
     background-color: var(--gray600);
     color: var(--gray400);
     border-radius: var(--radius-2);
+    border: none;
+    cursor: pointer;
 }
 
 .modal_exclude_post-btn{
@@ -88,5 +112,6 @@
     font-size: var(--font-size-4);
     font-weight: var(--font-weigth-2);
     line-height: var(--line-height-6);
+    cursor: pointer;
 }
 
