--- a/src/styles/displays.css
+++ b/src/styles/displays.css
@@ -2,7 +2,12 @@
     display: flex;
 }
 
-.flex_col{
+.flex_row_reverse{
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.flex_column{
     display: flex;
     flex-direction: column;
 }
@@ -26,6 +31,10 @@
 
 .justify_center{
     justify-content: center;
+}
+
+.justify_between{
+    justify-content: space-between;
 }
 
 .justify_around{
