--- a/src/styles/inputs.css
+++ b/src/styles/inputs.css
@@ -1,9 +1,9 @@
 .input{
     padding: 0 16px;
-    width: 321px;
-    height: 24px;
+    width: 100%;
+    height: 44px;
     border: 1px solid var(--gray600);
-    background-color: var(--gray600);
+    background-color: var(--gray800);
     font-weight: var(--font-weigth-3);
     font-size: var(--font-size-4);
     line-height: var(--line-height-6);
