--- a/src/pages/home/index.css
+++ b/src/pages/home/index.css
@@ -11,6 +11,54 @@
 
 .header_div{
     gap: 11px;
+    position: relative;
+}
+
+.exit_modal{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: absolute;
+    background-color: var(--gray900);
+    height: 90px;
+    width: 215px;
+    top: 41px;
+    border-radius: var(--radius-2);
+    border: 1px solid var(--gray600);
+}
+
+
+.user{
+    position: relative;
+    left: 20px;
+    top: 15px;
+}
+
+.img_exit{
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    top: 60px;
+    left: 20px;
+    cursor: pointer;
+}
+
+.btn_exit{
+    width: 100%;
+    max-height: 50%;
+    height: 50%;
+    border: none;
+    background-color: var(--gray900);
+    font-weight: var(--font-weigth-2);
+    font-size: var(--font-size-5);
+    line-height: var(--line-height-6);
+    color: var(--gray400);
+    cursor: pointer;
+}
+
+.btn_exit:hover{
+    background-color: var(--gray700);
+    color: var(--gray100);
 }
 
 .header_btn{
