--- a/src/styles/toast.css
+++ b/src/styles/toast.css
@@ -22,7 +22,13 @@
 
 .toast_div{
     display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.toast_div-2{
     gap: 15px;
+    display: flex;
 }
 
 
