--- a/src/pages/home/index.css
+++ b/src/pages/home/index.css
@@ -68,6 +68,8 @@
 .header_img{
     width: 40px;
     height: 40px;
+    border: 1px solid transparent;
+    border-radius: 100%;
     cursor: pointer;
 }
 
