--- a/src/pages/register/index.css
+++ b/src/pages/register/index.css
@@ -39,8 +39,8 @@
     position: relative;
 }
 
-.section-1_img-1{
-}
+/* .section-1_img-1{
+} */
 
 .section-1_img-2{
     position: relative;
@@ -123,9 +123,9 @@
     margin-top: -14px;
 }
 
-.section-2_form_btn{
+/* .section-2_form_btn{
 }
 
 .section-2_btn{
 
-}
+} */
