--- a/src/pages/home/index.css
+++ b/src/pages/home/index.css
@@ -10,22 +10,9 @@
 }
 
 .header_div{
-    gap: 11px;
     position: relative;
 }
 
-.exit_modal{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    position: absolute;
-    background-color: var(--gray900);
-    height: 90px;
-    width: 215px;
-    top: 41px;
-    border-radius: var(--radius-2);
-    border: 1px solid var(--gray600);
-}
 
 
 .user{
@@ -43,34 +30,14 @@
     cursor: pointer;
 }
 
-.btn_exit{
-    width: 100%;
-    max-height: 50%;
-    height: 50%;
-    border: none;
-    background-color: var(--gray900);
-    font-weight: var(--font-weigth-2);
-    font-size: var(--font-size-5);
-    line-height: var(--line-height-6);
-    color: var(--gray400);
-    cursor: pointer;
-}
-
-.btn_exit:hover{
-    background-color: var(--gray700);
-    color: var(--gray100);
-}
-
-.header_btn{
-  
-}
-
 .header_img{
     width: 40px;
     height: 40px;
     border: 1px solid transparent;
     border-radius: 100%;
     cursor: pointer;
+    position: relative;
+    bottom: 10px;
 }
 
 .feed_container{
@@ -91,12 +58,12 @@
     color: var(--gray100);
 }
 
-.feed_btn{
+/* .feed_btn{
 }
 
 .main{
 
-}
+} */
 
 .list_full{
     width: 100%;
@@ -107,16 +74,18 @@
     margin-bottom: 80px;
 }
 
-.post_div-1{
+/* .post_div-1{
 }
 
 .post_div-1_div-1{
-}
+} */
 
 .post_img{
     width: 40px;
     height: 40px;
     margin-right: 10px;
+    border: 1px solid transparent;
+    border-radius: 100%;
 }
 
 .user_name{
@@ -144,11 +113,11 @@
 }
 
 
-.post_div-1_div-3_btn-1{
+/* .post_div-1_div-3_btn-1{
 }
 
 .post_div-1_div-3_btn-2{   
-}
+} */
 
 .post_title{
     font-weight: var(--font-weigth-1);
@@ -169,6 +138,15 @@
     font-size: 16px;
     line-height: 150%;
     align-self: flex-start;
+}
+
+.invis_div{
+    width: 80px;
+    padding: 10px;
+}
+
+.hidden{
+    display: none;
 }
 
 
