--- a/src/styles/toast.css
+++ b/src/styles/toast.css
@@ -3,7 +3,8 @@
     width: 450px;
     display: flex;
     flex-direction: column;
-    position: absolute;
+    position: fixed;
+    z-index: 10;
     bottom: 30px;
     right: 15px;
     padding: 20px;
@@ -30,7 +31,6 @@
     gap: 15px;
     display: flex;
 }
-
 
 .toast_message_success{
     font-weight: var(--font-weigth-2);
@@ -71,7 +71,7 @@
     0%   {right: 30px; bottom:-100px}
     25% {right: 30px; bottom:10px}
     50% {right: 30px; bottom:10px}
-    100% {right: 30px; bottom:-100px}
+    100% {right: 30px; bottom:-150px}
 }
 
 
